@@ -1,3 +1,8 @@
+2021-04-11  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* dvips.h, configure.ac:
+	Add TeX Live version to banner.
+
 2021-04-10  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
 
 	* {pprescan,scanpage}.c:
